# honey-note

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.specify/: plan.md  specify.md  tasks.md
batchs/: Cargo.toml
batchs/src/beekeeper_loader/: beekeeper_loader_request.rs  beekeeper_loader_usecase.rs  main.rs
batchs/src/flower_loader/: flower_loader_converter.rs  flower_loader_master_gateway.rs  flower_loader_request.rs  flower_loader_usecase.rs  main.rs  resources_master_gateway.rs
batchs/src/honey_loader/: honey_loader_gateway.rs  honey_loader_models.rs  honey_loader_request.rs  honey_loader_usecase.rs  main.rs
batchs/src/prefecture_loader/: main.rs  prefecture_loader_request.rs  prefecture_usecase.rs
batchs/test/: beekeeper_loader.rs  common.rs  mod.rs
batchs/test/beekeeper_loader/: main_test.rs
batchs/test/common/: batch_test_base.rs
common/: Cargo.toml
common-type/: Cargo.toml
common-type/src/: models.rs  request.rs
common-type/src/models/: beekeeper.rs  color_feature.rs  flowers.rs  honey.rs  honey_detail.rs  honey_detail_basic.rs  honey_detail_dynamic.rs  honey_detail_types.rs  honey_input.rs  honey_input_basic.rs  honey_input_dynamic.rs  observation_input.rs  session.rs  user.rs
common-type/src/models/honey/: front_app_model.rs
common-type/src/request/: honey.rs
common-type/src/request/auth/: auth.rs
common-type/src/request/honey/: basic.rs  dynamic.rs  edit.rs  new.rs
common/config/: api.toml
common/config/server/: local.toml
common/src/: errors.rs  infrastructure.rs  lib.rs  models.rs  repository.rs
common/src/infrastructure/db/: sqlx.rs
common/src/infrastructure/db/sqlx/: beekeeper.rs  flower.rs  honey.rs  prefecture.rs  user.rs
common/src/infrastructure/gateway/: filesystem.rs
common/src/libs/: auth.rs
common/src/libs/config/models/: api.rs  server.rs
common/src/models/: beekeeper.rs  flowers.rs  prefectures.rs
common/src/repository/: beekeepers.rs  flowers.rs  honeies.rs  honey_repository.rs  honeys.rs  prefectures.rs  users.rs
docs/: AbustructDesignLogs.md  design.md  honey_login_spec.md  proposal_login_and_user_concept.md  user_guide_login.md
front/: Cargo.toml
front/src/: build.rs  commons.rs  detail_and_edit.rs  edit_and_new.rs  lib.rs  lists.rs  login_page_main.rs  signup_page_main.rs
front/src/commons/: ajax.rs  browser_adapter.rs  converters.rs  documents.rs  filters.rs  validators.rs
front/src/commons/converters/: flowers.rs
front/src/detail_and_edit/: detail.rs
front/src/detail_and_edit/detail/: honey_detail_page_main.rs
front/src/edit_and_new/: beekeeper_edit_and_new_main.rs  beekeeper_edit_mode.rs  beekeeper_new_mode.rs  edit_mode.rs  flower_edit_and_new_main.rs  flower_edit_mode.rs  flower_new_mode.rs  honey_edit_and_new_main.rs  new_mode.rs
front/src/lists/: beekeepers_list_page_main.rs  flower_list_page_main.rs  honeys_list_page_main.rs
front/src/show/: beekeeper_show_page_main.rs  honey_show_page_main.rs  mod.rs
front/tests/: signup_test.html  signup_tests.rs
resources/db/: honey_note.db.20260228  honey_note.db.backup
resources/db/migrations/: 0001_2024-08-17-061411_prefectures-up.sql  0002_2025_0628_1630_flower_master_up.sql  0003_2025-07-06_1440_beekeeper_master_up.sql  0004_2025-08-09_1500_create_honey_up.sql  0005_2026-03-19_1010_create_users_up.sql
resources/master_data/: flower_names.csv  japanese_prefectures.csv
resources/master_data/tests/: test_data_flower.csv
server/: Cargo.toml
server/src/: controllers.rs  main.rs  use_case.rs
server/src/assets/css/: common.css  common_form.css  common_list.css  honey_detail.css  honey_edit.css  main.css
server/src/assets/html/: index.html  login.html  signup.html
server/src/assets/html/beekeepers/: edit.html  lists.html  new.html  show.html
server/src/assets/html/flowers/: edit.html  lists.html  new.html  show.html
server/src/assets/html/honeies/: lists.html
server/src/assets/html/honeys/: detail.html  edit.html  lists.html  new.html  show.html
server/src/assets/html/test/: geo-test.html
server/src/controllers/: adapters.rs  auth_controller.rs  beekeeper_controller.rs  flower_controller.rs  health_checking.rs  honey_controller.rs  mod.rs  prefecture_controller.rs
server/src/controllers/adapters/: beekeepers.rs  flowers.rs  honies.rs
server/src/controllers/adapters/beekeepers/: get_all_beekeepers_adapter.rs
server/src/controllers/adapters/flowers/: get_all_flowers_adapter.rs
server/src/controllers/adapters/honies/: get_all_honies_adapter.rs  get_honey_details_adapter.rs
server/src/middleware/: auth.rs  mod.rs  put_log.rs
server/src/use_case/: get_all_beekeepers.rs  get_all_flowers.rs  get_all_honies.rs  get_all_prefectures.rs  get_honey_details.rs  put_new_honey.rs  put_new_honey_use_case.rs
server/src/use_case/get_all_beekeepers/: get_all_beekeepers_dto.rs  mod.rs
server/src/use_case/get_all_flowers/: get_all_flowers_dto.rs  mod.rs
server/src/use_case/get_all_honies/: get_all_honies_dto.rs  mod.rs
server/src/use_case/get_beekeeper_by_id/: get_beekeeper_by_id_dto.rs  mod.rs
server/src/use_case/get_flower_by_id/: get_flower_by_id_dto.rs  mod.rs
server/src/use_case/get_honey_by_id/: get_honey_by_id_dto.rs  mod.rs
server/src/use_case/get_honey_details/: get_honey_details_dto.rs
server/src/use_case/put_edit_beekeeper/: mod.rs  put_edit_beekeeper_dto.rs
server/src/use_case/put_edit_flower/: mod.rs  put_edit_flower_dto.rs
server/src/use_case/put_edit_honey/: mod.rs  put_edit_honey_dto.rs
server/src/use_case/put_new_beekeeper/: mod.rs  put_new_beekeeper_dto.rs
server/src/use_case/put_new_flower/: mod.rs  put_new_flower_dto.rs
server/src/use_case/put_new_honey/: mod.rs  put_new_honey_dto.rs
specs/: api.md  auth.md  auth_fix_spec.md  web-endpoint.md
specs/jp/: api.md  auth.md  auth_fix_spec.md  web-endpoint.md
