[workspace]
members = [
    "common-type",
    "common",
    "front",
    "server",
    "batchs"
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "https://github.com/daikihi/honey-note"
documentation = "https://github.com/daikihi/honey-note"
