[package]
name = "batchs"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "beekeeper_loader"
path = "src/beekeeper_loader/main.rs"


[[bin]]
name = "flower_loader"
path = "src/flower_loader/main.rs"

[[bin]]
name = "honey_loader"
path = "src/honey_loader/main.rs"

[[bin]]
name = "prefecture_loader"
path = "src/prefecture_loader/main.rs"
