[package]
name = "common-type"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
