[package]
name = "common"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"