[package]
name = "common"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
common-type = { path = "../common-type" }
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "derive"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
