[package]
name = "front"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.77"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["XmlHttpRequest","console"]

