[package]
name = "front"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
common-type = { path = "../common-type" }
wasm-bindgen = "0.2"
wasm-bindgen-futures ="0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console", 
    "Location",
    "Window",
    "Url",
    "Headers",
    "Request", 
    "RequestInit", 
    "RequestMode", 
    "Response",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlOptionElement",
    "Event",
    "EventTarget",
    "Node",
    "NodeList",
    "UrlSearchParams",
    "HtmlCollection",
    "HtmlOptionsCollection",
    "CssStyleDeclaration",
    ]

