[package]
name = "server"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace =true

[dependencies]
common = {path = "../common"}
actix-web = "4"
actix-files = "0.6.6"
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
