[package]
name = "server"
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace =true

[dependencies]
common = {path = "../common"}
common-type = { path = "../common-type" }
actix-web = "4"
actix-files = "0.6.6"
actix-cors = "0.7"
env_logger = "0.11.8"
log = "0.4.27"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"